--- a/Cheesr/.classpath
+++ b/Cheesr/.classpath
@@ -87,5 +87,6 @@
 	<classpathentry kind="lib" path="lib/default/wicket-extensions-javadoc-6.12.0.jar"/>
 	<classpathentry kind="lib" path="lib/default/wicket-extensions-source-6.12.0.jar"/>
 	<classpathentry kind="lib" path="lib/default/spring-context-support-jar-3.2.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/CheesrCommons.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
