--- a/CheesrCore/webapp/WEB-INF/web.xml
+++ b/CheesrCore/webapp/WEB-INF/web.xml
@@ -37,7 +37,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>CXFServlet</servlet-name>
-        <url-pattern>/*</url-pattern>
+        <url-pattern>/services/</url-pattern>
     </servlet-mapping>
 
 </web-app>
